support zero copy string creation for jdk14+